--- a/tracker.ipynb
+++ b/tracker.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,21 +68,22 @@
     "\n",
     "import json\n",
     "\n",
+    "from time import sleep\n",
+    "\n",
     "from datetime import datetime, timedelta\n",
     "from math import floor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Scraper settings\n",
     "targetIcao = \"a835af\"\n",
-    "startDate = datetime.strptime(\"2023/01/01\", '%Y/%m/%d').date()\n",
+    "startDate = datetime.strptime(\"2023/02/01\", '%Y/%m/%d').date()\n",
     "endDate = datetime.strptime(\"2023/02/08\", '%Y/%m/%d').date() #datetime.now().date()\n",
-    "startDate = endDate\n",
     "\n",
     "lat = \"0.000\"\n",
     "lon = \"0.000\"\n",
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,12 +158,15 @@
     "    return info\n",
     "\n",
     "def get_java_time(dt):\n",
-    "    return datetime.strptime(\"1970/01/01\", '%Y/%m/%d') + timedelta(seconds=floor(dt))"
+    "    return datetime.strptime(\"1970/01/01\", '%Y/%m/%d') + timedelta(seconds=floor(dt))\n",
+    "\n",
+    "def has_trace(obj):\n",
+    "    return len(obj) > 0 and obj[0].get(\"fullTrace\") != None and obj[0][\"fullTrace\"].get(\"trace\") != None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,12 +193,22 @@
     "\n",
     "delta = endDate - startDate\n",
     "for i in range(delta.days + 1):\n",
+    "    #Get webpage\n",
     "    driver.get(\"https://globe.adsbexchange.com/?icao={}&lat={}&lon={}&zoom={}&showTrace={}\".format(targetIcao, lat, lon, zoom, startDate + timedelta(days=i)))\n",
-    "    js_data = json.loads(driver.execute_script(jss))\n",
-    "    for l in js_data[0]['fullTrace']['trace']:\n",
-    "        t = get_java_time(l[0])\n",
-    "        data[str(t)] = build_dict(l)\n",
-    "        \n",
+    "\n",
+    "    #Give enough time for javascript execution + information return\n",
+    "    c = 0\n",
+    "    while (c < 5):\n",
+    "      sleep(1)\n",
+    "      js_data = json.loads(driver.execute_script(jss))\n",
+    "      c += 10 if has_trace(js_data) else 1\n",
+    "\n",
+    "    if(has_trace(js_data)):\n",
+    "\n",
+    "        for l in js_data[0]['fullTrace']['trace']:\n",
+    "            t = get_java_time(l[0])\n",
+    "            data[str(t)] = build_dict(l)\n",
+    "    \n",
     "driver.close()"
    ]
   },
@@ -210,14 +224,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
     "json_data = json.dumps(data, indent=4)\n",
     " \n",
     "# Writing to sample.json\n",
-    "with open(save_file, \"w\") as target_file:\n",
+    "with open(targetIcao + \"_\" + save_file, \"w\") as target_file:\n",
     "    target_file.write(json_data)"
    ]
   },
@@ -231,14 +245,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'lat': 35.891449, 'lon': -120.471925, 'baro_alt': 33000, 'grd_speed': 534.2, 'extra': {'flight_num': 'N628TS  ', 'geom_alt': 33425, 'geom_rate': 32, 'baro_rate': 0, 'indicated_spd': 319, 'true_spd': 510, 'mach': 0.888, 'wind_dir': 280, 'wind_spd': 31, 'grd_track': 138.49, 'mag_heading': 128.32, 'true_heading': 140.7}}\n"
+      "{'lat': 32.164948, 'lon': -106.608966, 'baro_alt': 43000, 'grd_speed': 464, 'extra': {'flight_num': 'N628TS  ', 'geom_alt': 44000, 'baro_rate': -64, 'grd_track': 306.5}}\n"
      ]
     }
    ],
@@ -253,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
