searched for data start

--- a/tracker.ipynb
+++ b/tracker.ipynb
@@ -13,13 +13,16 @@
     "\n",
     "Jet information\n",
     "- Registration: N628TS\n",
-    "- ICON hex number: A835AF\n",
+    "- ICAO hex number: A835AF\n",
     "- Category: A3 Large (75000 to 300000 lb)\n",
+    "- Bought in 2006\n",
     "\n",
     "Source is ADS-B exchange (All proper APIs are priced)\n",
     "- https://globe.adsbexchange.com\n",
     "- https://globe.adsbexchange.com/?icao=a835af&lat=37.731&lon=-122.215&zoom=1.0&showTrace=2023-02-08 Using their replay function for day -> showTrace=YYYY-MM-DD\n",
     "- https://globe.adsbexchange.com/?replay=2023-02-16-11:46&lat=40.560&lon=-73.660&zoom=9.0 (Deprecated) Using their replay function -> replay=YYYY-MM-DD-HH:MM\n",
+    "\n",
+    "- Beginning of data seems to be on 2020-01-19\n",
     "\n",
     "Settings:\n",
     "- replay=YYYY-MM-DD-HH:MM\n",
@@ -82,8 +85,8 @@
    "source": [
     "#Scraper settings\n",
     "targetIcao = \"a835af\"\n",
-    "startDate = datetime.strptime(\"2023/02/01\", '%Y/%m/%d').date()\n",
-    "endDate = datetime.strptime(\"2023/02/08\", '%Y/%m/%d').date() #datetime.now().date()\n",
+    "startDate = datetime.strptime(\"2020/01/19\", '%Y/%m/%d').date()\n",
+    "endDate = datetime.now().date() # datetime.strptime(\"2023/02/08\", '%Y/%m/%d').date()\n",
     "\n",
     "lat = \"0.000\"\n",
     "lon = \"0.000\"\n",
@@ -224,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
