--- a/tracker.ipynb
+++ b/tracker.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,11 +145,11 @@
     "\n",
     "def build_dict(lin):\n",
     "    info = {}\n",
-    "    info[\"lat\"] = lin[1]\n",
-    "    info[\"lon\"] = lin[2]\n",
-    "    info[\"baro_alt\"] = lin[3]\n",
-    "    info[\"grd_speed\"] = lin[4]\n",
-    "    if lin[8] == None:\n",
+    "    info[\"lat\"] = lin[1] if len(lin) > 1 else None\n",
+    "    info[\"lon\"] = lin[2] if len(lin) > 2 else None\n",
+    "    info[\"baro_alt\"] = lin[3] if len(lin) > 3 else None\n",
+    "    info[\"grd_speed\"] = lin[4] if len(lin) > 4 else None\n",
+    "    if len(lin) < 9 or lin[8] == None:\n",
     "        info[\"extra\"] = None\n",
     "    else:\n",
     "        extra = {}\n",
@@ -169,7 +169,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "def progressbar(p, prefix=\"\", size=60, out=sys.stdout): # Python3.3+\n",
+    "    x = int(size*p)\n",
+    "    print(\"{}[{}{}] {}%\".format(prefix, \"#\"*x, \".\"*(size-x), int(p*100)), end='\\r', file=out, flush=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,6 +249,25 @@
     "# Writing to sample.json\n",
     "with open(targetIcao + \"_\" + save_file, \"w\") as target_file:\n",
     "    target_file.write(json_data)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Display data</h2>\n",
+    "\n",
+    "1. Display succeding locations where plane stopped"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1. Get locations of plane\n"
    ]
   },
   {
